# claude-code-local

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  create-mac-app.sh  docker-compose.yml  install.sh  launch.sh  pyproject.toml  server.py  setup-mac.sh  start.sh  stop.sh  test_workbuddy.py
config_examples/openclaw/: auth-profiles.json  openclaw.json
integrations/: openclaw.md  workbuddy.md
shortcuts/: Claude Code.command  install-icon.sh  解除拦截说明.md
