[project]
name = "claude-code-local"
version = "1.0.0"
description = "Local proxy for Claude Code CLI — integrates with OpenClaw and WorkBuddy"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
claude-proxy = "server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
